# semantic-code-search

./: Cargo.toml
.github/actions/: format-test.yaml
.github/workflows/: format-test.yml
src/: embed.rs  index.rs  languages.rs  lib.rs  split.rs
