[package]
name = "semantic-code-search"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["arrow"]}
code-splitter = { git = "https://github.com/mabeledo/code-splitter.git", features = ["tiktoken-rs"] }
fastembed = "4"
lancedb = { version = "0.19.0-beta.8", features = ["polars"] }
ort = { version = "2.0.0-rc.9", features = ["coreml"] }
polars = { version = "0.46", features = ["dtype-array", "parquet", "polars-io", "lazy"] }
polars-arrow = { version = "0.46", features = ["arrow-format"] }
tempfile = "3"
tree-sitter = "0.25.3"
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
